[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-mycelia-signal"
version = "1.3.2"
description = "LangChain tools for Mycelia Signal — cryptographically signed price oracles with automatic x402 (USDC on Base) payment"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Jonathan Bulkeley", email = "info@myceliasignal.com" }
]
keywords = [
    "langchain", "oracle", "bitcoin", "price", "x402", "l402",
    "ai-agents", "crypto", "attestation", "signed-data", "forex", "macro"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]

# Core dependencies — minimal, no wallet libs required for free tier
dependencies = [
    "langchain-core>=0.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# Paid tier — adds eth_account for x402 payment signing
paid = [
    "eth-account>=0.13.0",
]
# Dev dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://myceliasignal.com"
Documentation = "https://myceliasignal.com/docs"
Repository = "https://github.com/jonathanbulkeley/langchain-mycelia-signal"
"Bug Tracker" = "https://github.com/jonathanbulkeley/langchain-mycelia-signal/issues"

[tool.hatch.build.targets.wheel]
packages = ["langchain_mycelia_signal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
